[package]
name = "fluent-onyx"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluent = "0.16.0"
byond = { git = "https://github.com/PJB3005/byond-rs", package = "byond" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
backtrace = "0.3.64"
flexi_logger = { version = "0.22.3", features = ["use_chrono_for_offset"] }
log = "0.4.16"
anyhow = "1.0.56"
thiserror = { version = "1.0.30" }
rand = "0.8.5"
